--- a/IdpBrocker.Domain/IdpBrocker.Domain.csproj
+++ b/IdpBrocker.Domain/IdpBrocker.Domain.csproj
@@ -7,12 +7,10 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.Core" Version="3.3.31.2" />
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.3.4.45" />
+    <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="Microsoft.Extensions.Options" />
-  </ItemGroup>
-
+ 
   <ItemGroup>
     <Folder Include="Extensions\" />
   </ItemGroup>
